# zerotier-desktop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
frontend/: app.js  index.html  styles.css
src/: arp.js  main.js  preload.js  zt-client.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/renderer/: app.js  index.html  styles.css
src/renderer/fonts/: lexend.css
test/: zt-client.test.js
tools/: capture-preview.js
