[package]
name = "zerotier-desktop"
version = "1.0.0"
description = "ZeroTier desktop client (Tauri)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
encoding_rs = "0.8"

# Minimize the release binary size.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
